--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   outline: none;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
 :root {
   --color-neutral-0: #0e0c0c;
   --color-neutral-10: #171717;
