--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,15 @@
     outline: none;
 }
 
+@import "partials/colors";
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
 :root {
     --color-neutral-0: #0e0c0c;
     --color-neutral-10: #171717;
