--- a/style.css
+++ b/style.css
@@ -6,13 +6,79 @@
   outline: none;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+header {
   width: 100%;
-  height: 100vh;
-  position: relative;
 }
 
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-link {
+  display: flex;
+  gap: 40px;
+}
+
+a {
+  color: #FFF;
+  text-decoration: none;
+}
+
+.header-link .link:hover {
+  animation: translateY 0.9s infinite alternate;
+  color: #d62121;
+}
+
+@keyframes translateY {
+  from {
+    transform: translateY(0) scale(1);
+  }
+  to {
+    transform: translateY(-8px) scale(1.2);
+  }
+}
+.header-button {
+  border: 1px solid #FFF;
+  padding: 8px 24px;
+  border-radius: 4px;
+  color: #FFF;
+  background-color: transparent;
+  transition: background-color 0.5s;
+}
+
+.header-button:hover {
+  border: 1px solid #d62121;
+  background-color: #d62121;
+}
+
+.header-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+@media screen and (max-width: 768px) {
+  .header-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .header-content a {
+    margin-top: 16px;
+    font-size: 36px;
+  }
+  .header-logo img {
+    width: 160px;
+    margin-top: 25px;
+  }
+  .header-button {
+    display: none;
+  }
+}
 :root {
   --color-neutral-0: #0e0c0c;
   --color-neutral-10: #171717;
@@ -70,9 +136,18 @@ footer {
 }
 
 #footer_social_media .footer-link:hover {
+  animation: translateY 0.5s infinite alternate;
   opacity: 0.8;
 }
 
+@keyframes translateY {
+  from {
+    transform: translateY(0) scale(1);
+  }
+  to {
+    transform: translateY(-2px) scale(1.2);
+  }
+}
 #instagram {
   background: linear-gradient(#7f37c9, #ff2992, #ff9807);
 }
@@ -117,4 +192,15 @@ footer {
     grid-template-columns: repeat(1, 1fr);
     padding: 3rem 2rem;
   }
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: #06121E;
+}
+
+img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
