--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,9 @@
 
 @import "partials/colors";
 @import "partials/header";
+@import "partials/layout";
 @import "partials/footer";
+
 
 body {
     font-family: Arial, Helvetica, sans-serif;
