--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -10,7 +10,7 @@
     content: '';
     display: block;
     position: absolute;
-    background-image: linear-gradient(to bottom, rgba(93, 168, 243, 0.1), #06121e), url("../assets/background.jpg");
+    background-image: linear-gradient(to bottom, rgba(0, 88, 176, 0.1), #06121e), url("../assets/background.jpg");
     left: 0;
     top: 0;
     width: 100%;
@@ -54,7 +54,6 @@
     background-color: red;
     border: 0px;
     font-size: 18px;
-    text-decoration: none;
     font-weight: 600;
     margin: 14px 0;
 }
@@ -129,6 +128,7 @@
     p{
         margin-bottom: 14px;
         line-height: 150%;
+        font-size: 25px;
     }
 }
 
@@ -139,3 +139,89 @@
 }
 
 // -------------
+
+// ------------- PROJETOS
+
+.projetos {
+    background-color: $white-normal;
+    color: $black-normal;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 54px 14px;
+}
+
+.projetos-content {
+    h1 {
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 38px;
+        margin-bottom: 14px;
+    }
+
+    p{
+        line-height: 150%;
+        margin-bottom: 14px;
+        text-align: center;
+        max-width: 780px;
+    }
+}
+
+.construcoes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    padding: 0 44px 34px 44;
+}
+
+.construcao{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: $white-normal;
+    border-radius: 8px;
+    box-shadow: 0px -1px 17px -4px rgba(0,0,0, 0.45);
+
+    overflow: hidden;
+    
+    img {
+        width: 100%;
+        max-width: 354px;
+        transition: transform 0.2s;
+    }
+}
+
+.construcao img:hover {
+    transform: scale(1.2);
+    z-index: 1;
+}
+
+.construcao-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 14px;
+    background-color: $white-normal;
+    z-index: 99;
+
+    button {
+        color: $white-normal;
+        background-color: red;
+        padding: 4px 8px;
+        border-radius: 4px;
+        border: 0;
+        cursor: default;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .construcoes {
+        flex-direction: column;
+    }
+
+    .construcao {
+        max-width: 740px;
+    }
+}
