--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(93, 168, 243, 0.1), #06121e), url("../assets/background.jpg");
+  background-image: linear-gradient(to bottom, rgba(0, 88, 176, 0.1), #06121e), url("../assets/background.jpg");
   left: 0;
   top: 0;
   width: 100%;
@@ -128,7 +128,6 @@ header {
   background-color: red;
   border: 0px;
   font-size: 18px;
-  text-decoration: none;
   font-weight: 600;
   margin: 14px 0;
 }
@@ -191,11 +190,88 @@ header {
 .about-description p {
   margin-bottom: 14px;
   line-height: 150%;
+  font-size: 25px;
 }
 
 @media screen and (max-width: 768px) {
   .about-content {
     flex-direction: column;
+  }
+}
+.projetos {
+  background-color: #FFF;
+  color: #232224;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 54px 14px;
+}
+
+.projetos-content h1 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 38px;
+  margin-bottom: 14px;
+}
+.projetos-content p {
+  line-height: 150%;
+  margin-bottom: 14px;
+  text-align: center;
+  max-width: 780px;
+}
+
+.construcoes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 0 44px 34px 44;
+}
+
+.construcao {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #FFF;
+  border-radius: 8px;
+  box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.45);
+  overflow: hidden;
+}
+.construcao img {
+  width: 100%;
+  max-width: 354px;
+  transition: transform 0.2s;
+}
+
+.construcao img:hover {
+  transform: scale(1.2);
+  z-index: 1;
+}
+
+.construcao-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 14px;
+  background-color: #FFF;
+  z-index: 99;
+}
+.construcao-info button {
+  color: #FFF;
+  background-color: red;
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 0;
+  cursor: default;
+}
+
+@media screen and (max-width: 768px) {
+  .construcoes {
+    flex-direction: column;
+  }
+  .construcao {
+    max-width: 740px;
   }
 }
 :root {
@@ -322,4 +398,9 @@ body {
 
 img {
   width: 100%;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
