--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(0, 88, 176, 0.1), #06121e), url("../assets/background.jpg");
+  background-image: linear-gradient(to bottom, rgba(33, 17, 156, 0.1), #06121e), url("../assets/background.jpg");
   left: 0;
   top: 0;
   width: 100%;
@@ -274,6 +274,169 @@ header {
     max-width: 740px;
   }
 }
+.feedbacks {
+  background-color: #FFF;
+  color: #232224;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 54px 14px;
+}
+
+.feedback-content h1 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 38px;
+  margin-bottom: 14px;
+}
+.feedback-content p {
+  line-height: 150%;
+  margin-bottom: 14px;
+  text-align: center;
+  max-width: 780px;
+}
+
+.feedback {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background-color: #FFF;
+  border-radius: 8px;
+  box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.45);
+  overflow: hidden;
+}
+.feedback video {
+  width: 100%;
+  max-width: 354px;
+  transition: transform 0.2s;
+}
+
+.feedback-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 14px;
+  background-color: #FFF;
+  z-index: 99;
+}
+.feedback-info button {
+  color: #FFF;
+  background-color: red;
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 0;
+  cursor: default;
+}
+
+.feedback-imperatriz {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+.slider-description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 0 44px 34px 44;
+}
+
+.slider {
+  margin: 0 auto;
+  width: 800px;
+  height: 400px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 400%;
+  height: 400px;
+  display: flex;
+}
+.slides input {
+  display: none;
+}
+
+.slide {
+  width: 25%;
+  position: relative;
+}
+.slide img {
+  width: 800px;
+}
+
+.manual-navigation {
+  position: absolute;
+  width: 800px;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #fff;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transform: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background-color: #fff;
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+  margin-left: -25%;
+}
+
+#radio3:checked ~ .first {
+  margin-left: -50%;
+}
+
+.navigation-auto {
+  position: absolute;
+  width: 800px;
+  margin-top: 360px;
+  display: flex;
+  justify-content: center;
+}
+.navigation-auto div {
+  border: 2px solid #fff;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transform: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background-color: #FFF;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+  background-color: #FFF;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+  background-color: #FFF;
+}
+
 :root {
   --color-neutral-0: #0e0c0c;
   --color-neutral-10: #171717;
@@ -299,14 +462,17 @@ footer {
 }
 
 #footer_content {
-  background-color: var(--color-neutral-10);
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  background-color: #10097f;
   padding: 3rem 3.5rem;
+  display: flex;
+  justify-content: space-around;
 }
 
-#footer_contacts h1 {
+.footer_contacts h1 {
   margin-bottom: 0.75rem;
+}
+.footer_contacts img {
+  max-width: 200px;
 }
 
 #footer_social_media {
@@ -364,13 +530,13 @@ footer {
 }
 
 .footer-list .footer-link:hover {
-  color: #7f37c9;
+  color: #FFF;
 }
 
 #footer_copyright {
   display: flex;
   justify-content: center;
-  background-color: var(--color-neutral-0);
+  background-color: #000062;
   font-size: 0.9rem;
   padding: 1.5rem;
   font-weight: 100;
