--- a/style.css
+++ b/style.css
@@ -86,15 +86,12 @@ header {
   padding: 0 10px;
 }
 
-.bg-home:before {
-  content: "";
-  display: block;
-  position: absolute;
-  background-image: linear-gradient(to bottom, rgba(33, 17, 156, 0.1), #06121e), url("../assets/background.jpg");
+.bg-home {
+  width: 100%;
+  height: 100vh !important;
+  background-image: linear-gradient(to bottom, rgba(32, 73, 236, 0.3), #06121e), url("../assets/background.jpg");
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
   z-index: -1;
   background-size: cover;
   background-repeat: no-repeat;
@@ -163,7 +160,11 @@ header {
   }
 }
 .about {
-  background-color: #06121E;
+  background-image: linear-gradient(to top, rgba(32, 73, 236, 0.1), #06121e), linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e), url("../assets/background-about.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  opacity: 0.7;
   overflow: hidden;
   color: #FFF;
 }
@@ -199,8 +200,13 @@ header {
   }
 }
 .projetos {
-  background-color: #FFF;
-  color: #232224;
+  background-image: linear-gradient(to top, rgba(32, 73, 236, 0.1), #06121e), linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e), url("../assets/background-about.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  opacity: 0.7;
+  overflow: hidden;
+  color: #FFF;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -208,6 +214,9 @@ header {
   padding: 54px 14px;
 }
 
+.projetos-content {
+  background-attachment: fixed;
+}
 .projetos-content h1 {
   text-transform: uppercase;
   text-align: center;
@@ -222,7 +231,8 @@ header {
 }
 
 .construcoes {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
   justify-content: center;
   align-items: center;
   gap: 16px;
@@ -269,6 +279,18 @@ header {
 @media screen and (max-width: 768px) {
   .construcoes {
     flex-direction: column;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+  .construcao {
+    max-width: 740px;
+  }
+}
+@media screen and (max-width: 426px) {
+  .construcoes {
+    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
   }
   .construcao {
     max-width: 740px;
@@ -421,6 +443,14 @@ header {
   transform: 1s;
 }
 
+@media screen and (max-width: 768px) {
+  .feedback-imperatriz {
+    flex-direction: column;
+  }
+  .slider {
+    max-width: 460px;
+  }
+}
 .navigation-auto div:not(:last-child) {
   margin-right: 40px;
 }
