--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -96,9 +96,6 @@
 // ------------- SOBRE 
 
 .about {
-    background-image: linear-gradient(to top, rgba(32, 73, 236, 0.1), #06121e),
-        linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e),
-        url("../assets/background-about.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 0;
@@ -148,9 +145,9 @@
 // ------------- PROJETOS
 
 .projetos {
-    background-image: linear-gradient(to top, rgba(32, 73, 236, 0.1), #06121e),
-        linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e),
-        url("../assets/background-about.jpg");
+    background-image: linear-gradient(to top, rgba(0, 51, 255, 0.5), #06121e);
+        //linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e),
+        //url("../assets/background-about.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 0;
@@ -263,8 +260,17 @@
 // ------------- FEEDBACKS
 
 .feedbacks {
-    background-color: $white-normal;
-    color: $black-normal;
+    background-image: linear-gradient(to bottom, rgba(0, 51, 255, 0.5), #06121e);
+        //linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e),
+        //url("../assets/background-about.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    opacity: 0.7;
+
+    overflow: hidden;
+    color: $white-normal;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -328,7 +334,17 @@
 // ------------- FEEDBACK IMPERATRIZ
 
 .feedback-imperatriz {
-    background-color: #fff;
+    background-image: linear-gradient(to top, rgba(0, 51, 255, 0.5), #06121e);
+        //linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e),
+        //url("../assets/background-about.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    opacity: 0.7;
+
+    overflow: hidden;
+    color: $white-normal;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
