--- a/style.css
+++ b/style.css
@@ -160,7 +160,6 @@ header {
   }
 }
 .about {
-  background-image: linear-gradient(to top, rgba(32, 73, 236, 0.1), #06121e), linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e), url("../assets/background-about.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
@@ -200,7 +199,7 @@ header {
   }
 }
 .projetos {
-  background-image: linear-gradient(to top, rgba(32, 73, 236, 0.1), #06121e), linear-gradient(to bottom, rgba(32, 73, 236, 0.1), #06121e), url("../assets/background-about.jpg");
+  background-image: linear-gradient(to top, rgba(0, 51, 255, 0.5), #06121e);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
@@ -297,8 +296,13 @@ header {
   }
 }
 .feedbacks {
-  background-color: #FFF;
-  color: #232224;
+  background-image: linear-gradient(to bottom, rgba(0, 51, 255, 0.5), #06121e);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  opacity: 0.7;
+  overflow: hidden;
+  color: #FFF;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -352,7 +356,13 @@ header {
 }
 
 .feedback-imperatriz {
-  background-color: #fff;
+  background-image: linear-gradient(to top, rgba(0, 51, 255, 0.5), #06121e);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  opacity: 0.7;
+  overflow: hidden;
+  color: #FFF;
   display: flex;
   flex-direction: column;
   justify-content: center;
